discussion/kv_engine/166007/166007_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49594: Reset cursor distance in CM::resetCursors

The cursor distance might be corrupted otherwise, which would make a
bunch of possible cascade issues:
1. Wrong distance passed to boost::list::splice(range, distance) at
   ItemExpel -> The side effect would be corrupting the internal
   tracked container size, with undefined behaviour at that point
2. Wrong distance used when computing some checkpoint stats -> That
   might underflow non-negative counters, which would also crash the
   node on DEV builds

Change-Id: I7f4c1dae39854a5695a226a8703d06b725df3b17

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-11-22 14:30:32.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-11-22 14:32:30.000000000
Message: 
Patch Set 5:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-22 14:34:24.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35575/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41900/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41900/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3735/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3735/ )

Compile error at [2021-11-22T14:33:38.632Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: no member named "incNumOfCursorsInCheckpoint" in "std::unique_ptr<Checkpoint, std::default_delete<Checkpoint> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3735/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15724/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15724/ )

Compile error at [2021-11-22T14:33:42.349Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: ?class std::unique_ptr<Checkpoint>? has no member named ?incNumOfCursorsInCheckpoint?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16007/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16007/ )

Compile error at [2021-11-22T14:33:56.614Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: ?class std::unique_ptr<Checkpoint>? has no member named ?incNumOfCursorsInCheckpoint?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16007/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24092/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3810/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3810/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14102/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19: error: no member named "incNumOfCursorsInCheckpoint" in "std::unique_ptr<Checkpoint, std::default_delete<Checkpoint> >" [clang-diagnostic-error]
    checkpointIt->incNumOfCursorsInCheckpoint();
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14102/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: no member named "incNumOfCursorsInCheckpoint" in "std::unique_ptr<Checkpoint, std::default_delete<Checkpoint> >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14102/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16737/ : FAILURE

Compile error at [2021-11-22T14:32:03.683Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: no member named "incNumOfCursorsInCheckpoint" in "std::unique_ptr<Checkpoint, std::default_delete<Checkpoint> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16737/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14894/ : FAILURE

Compile error at [2021-11-22T14:33:11.480Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/checkpoint_cursor.cc:68:19:
error: no member named "incNumOfCursorsInCheckpoint" in "std::__1::unique_ptr<Checkpoint, std::__1::default_delete<Checkpoint> >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14894/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12910/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
